# vulkanite

./: Cargo.toml
crates/vulkanite_types/: Cargo.toml
crates/vulkanite_types/src/: buffer.rs  image.rs  lib.rs  pipeline.rs  texture.rs
crates/vulkanite_vulkan/: Cargo.toml
crates/vulkanite_vulkan/src/: adapter.rs  buffer.rs  command.rs  conv.rs  debug.rs  device.rs  instance.rs  lib.rs  pipeline.rs  queue.rs  shader.rs  surface.rs  sync.rs  texture.rs
crates/vulkanite_vulkan/src/types/: device.rs  image.rs  mod.rs  pipeline.rs
crates/vulkanite_web/: Cargo.toml
examples/vulkan/: Cargo.toml
examples/vulkan/src/shader/: frag.spv  mesh.vert  shader.frag  shader.vert  triangle.vert  triangle.wgsl  vert.spv
