[package]
name = "vulkan"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.27.5"
vulkanite_vulkan = { path = "../../crates/vulkanite_vulkan", version = "0.1" }

tracing = "0.1.34"
tracing-subscriber = "0.3.1"
bytemuck = { version = "1.12.3", features = [ "derive" ] }

nalgebra-glm = "0.17.0"
tobj = "3.2.3"